# lrc-erasure-code

./: .gitignore  LICENSE  Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac
gf-complete/: .gitignore  README
gf-complete/src/: gf_w8.c
include/: lrc.h
jerasure/: tags
src/: Makefile.am  Makefile.in  galois.c  gf.c  gf_w16.c  gf_w32.c  gf_w4.c  gf_w64.c  gf_w8.c  jerasure.c  lrc.c  reed_sol.c
test/: Makefile.am  Makefile.in  example.c  test_lrc.c  x.c
